add change size feature

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <body>
         <div class="container"></div>
         <button onclick="resetContainer()">Clear</button>
+        <button onclick="changeContainerSize()">Change Size</button>
         <script src="script.js" async defer></script>
     </body>
 </html>
