add color change functionality

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <div class="container"></div>
         <button onclick="resetContainer()">Clear</button>
         <button onclick="changeContainerSize()">Change Size</button>
+        <button onclick="blue()">Blue</button>
+        <button onclick="randomColor()">Random Color</button>
+        <button onclick="rainbowColor()">Rainbow Color</button>
+        <button onclick="changeBackgroundColor('red')">Change Background Red</button>
         <script src="script.js" async defer></script>
     </body>
 </html>
